image and button flicker fixed

--- a/folloui/src/app/components/left-sidebar/left-sidebar.component.scss
+++ b/folloui/src/app/components/left-sidebar/left-sidebar.component.scss
@@ -87,10 +87,12 @@
         overflow-y: scroll;
         overflow-x: hidden;
 
-        a {
+        .btn-link {
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
+            width: 100%;
+            text-align: left;
 
             &:hover {
                 overflow: visible;
