--- a/folloui/src/app/components/view-community-detail/view-community-detail.component.scss
+++ b/folloui/src/app/components/view-community-detail/view-community-detail.component.scss
@@ -12,7 +12,7 @@
         float: left;
         margin-left: 10px;
         color: white;
-        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+        text-shadow: 4px 0 black, 0 2px black, 2px 0 black, 0 2px black;
         font-family: URW Chancery L, cursive;
         font-weight: 900;
     }
